Tickets section - fix alignment and mobile sizes
- Use angular to output blocks
- Make more mobile-friendly columns sizes
- Center text for days

--- a/src/app/components/tickets/tickets.less
+++ b/src/app/components/tickets/tickets.less
@@ -13,12 +13,14 @@
 
 .tickets-panel {
   height: 200px;
-}
 
-.tickets-panel h2 {
-  margin-bottom: 0;
-}
-
-.tickets-panel h6 {
-  margin-top: 2px;
+  h2 {
+    margin-bottom: 0 !important;
+  }
+  h4 {
+    text-align: center;
+  }
+  h6 {
+    margin-top: 2px;
+  }
 }
